--- a/resources/components/header/header.twig
+++ b/resources/components/header/header.twig
@@ -1,11 +1,73 @@
 {% import _self as macros %}
 
-{% macro content() %}
+{% set scope = {
+   menu: [
+      {
+         url:'/',
+         name: 'Реализованные проекты',
+      },
+      {
+         url:'/',
+         name: 'Новости',
+      },
+      {
+         url:'/',
+         name: 'Контакты',
+      },
+   ],
+   phone: '+7 (900) 900-90-90',
+} %}
 
-   <div class="Container">
-      Header
+{% macro logo() %}
+   <a href="{{ route('home') }}">
+      <img
+         src="{{ 'images/logo.png'|asset }}"
+         alt="Zagdom"
+      >
+   </a>
+{% endmacro %}
+
+{% macro phone(value) %}
+   <a class="PrimaryPhone" href="tel:{{ value }}">
+      <img
+         class="PrimaryPhone__icon"
+         src="{{ 'icons/phone.svg' |asset }}"
+         alt="Phone"
+      >
+      {{ value }}
+   </a>
+{% endmacro %}
+
+{% macro button() %}
+   <button class="Button Button--prm">
+      Ocтавить заявку
+   </button>
+{% endmacro %}
+
+{% macro content(scope) %}
+
+   {% import _self as macros %}
+
+   <div class="Container Header">
+      <div class="Header__logo">
+         {{ macros.logo }}
+      </div>
+
+      <nav class="Header__nav">
+         {% include "@components/site-nav/site-nav.twig" with {
+            items: scope.menu,
+         } %}
+      </nav>
+
+      <div class="Header__phone">
+         {{ macros.phone(scope.phone) }}
+      </div>
+
+      <div class="Header__feedbackButton">
+         {{ macros.button }}
+      </div>
    </div>
 
 {% endmacro %}
 
-{{ macros.content }}
+{{ macros.content(scope) }}
