--- a/resources/components/header/header.twig
+++ b/resources/components/header/header.twig
@@ -44,6 +44,48 @@
    </button>
 {% endmacro %}
 
+{% macro offcanvasButton() %}
+   <button
+      type="button"
+      class="Button Button--prm Button--icon"
+      uk-toggle="target: #offcanvas"
+      id="offcanvas-button"
+   >
+      <img
+         src="{{ 'icons/burger.svg'|asset }}"
+         width="24"
+         height="14"
+         alt="Menu"
+      >
+   </button>
+{% endmacro %}
+
+{% macro offcanvas(scope) %}
+   <div id="offcanvas" class="Offcanvas" uk-offcanvas="overlay: true; flip: true">
+      <div class="uk-offcanvas-bar Offcanvas__layout">
+         <button class="uk-offcanvas-close Offcanvas__close" type="button">
+            <img
+               src="{{ 'icons/close-w.svg'|asset }}"
+               width="12"
+               height="12"
+               alt="Cls"
+            >
+         </button>
+
+         <nav class="Offcanvas__nav">
+            {% include '@components/site-nav/site-nav.twig' with {
+               items: scope.menu,
+               column: true,
+            } %}
+         </nav>
+
+         <div class="Offcanvas__contacts">
+            {% include '@components/contacts/contacts.twig' %}
+         </div>
+      </div>
+   </div>
+{% endmacro %}
+
 {% macro content(scope) %}
 
    {% import _self as macros %}
@@ -66,7 +108,12 @@
       <div class="Header__feedbackButton">
          {{ macros.button }}
       </div>
+
+      <div class="Header__offcanvasButton">
+         {{ macros.offcanvasButton }}
+      </div>
    </div>
+   {{ macros.offcanvas(scope) }}
 
 {% endmacro %}
 
