--- a/resources/styles/main.scss
+++ b/resources/styles/main.scss
@@ -11,11 +11,13 @@ $reg: 400;
 $med: 500;
 $bold: 700;
 
+
 /* Functions */
 
 @function toRem($size) {
    @return $size / 16px * 1rem;
 }
+
 
 /* Base */
 
@@ -25,7 +27,9 @@ $bold: 700;
 
 
 /* Other */
+
 @import "./elements.scss";
+@import "./swiper.scss";
 
 
 /* Components */
@@ -33,4 +37,6 @@ $bold: 700;
 @import "../components/header/header.scss";
 @import "../components/site-nav/site-nav.scss";
 @import "../components/contacts/contacts.scss";
+@import "../components/slider/slider.scss";
+@import "../components/featured-section/featured-section.scss";
 @import "../components/footer/footer.scss";
