--- a/resources/styles/main.scss
+++ b/resources/styles/main.scss
@@ -39,4 +39,6 @@ $bold: 700;
 @import "../components/contacts/contacts.scss";
 @import "../components/slider/slider.scss";
 @import "../components/featured-section/featured-section.scss";
+@import "../components/projects-section/projects-section.scss";
+@import "../components/news-list/news-list.scss";
 @import "../components/footer/footer.scss";
